// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
exports[`FormCheckBox should render properly with some props assigned 1`] = `
<div
  style={null}
>
  <input
    className="input"
    onChange={null}
    type="checkbox"
  />
  <label
    style={null}
  />
</div>
`;

exports[`FormCheckBox should render with just required props passed 1`] = `
<div
  style={null}
>
  <input
    className="input"
    onChange={null}
    type="checkbox"
  />
  <label
    style={null}
  />
=======
exports[`FormCheckBox should render with many props assigned 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "margin": "1rem",
    }
  }
>
  <input
    className="input"
    id="test value"
    name="test-checkbox"
    onChange={[MockFunction]}
    type="checkbox"
    value="test value"
  />
  <label
    htmlFor="test-checkbox"
    style={
      Object {
        "fontWeight": "bold",
        "margin": "1rem",
        "textTransform": "uppercase",
      }
    }
  >
    test value
  </label>
</div>
`;

exports[`FormCheckBox should render with required props 1`] = `
<div
  style={Object {}}
>
  <input
    className="input"
    id="test value"
    name="test-checkbox"
    onChange={[Function]}
    type="checkbox"
    value="test value"
  />
  <label
    htmlFor="test-checkbox"
    style={Object {}}
  >
    test value
  </label>
>>>>>>> 1e3818fe1ed61deeda96881e0e7a718d44c1dd4e
</div>
`;
